--- a/src/components/Providers/ProviderDetails.css
+++ b/src/components/Providers/ProviderDetails.css
@@ -235,7 +235,7 @@
   font-size: 1.4rem;
   font-weight: 700;
   color: #1e293b;
-  text-align: center;
+  text-align: start;
 }
 
 .statistics-grid {
