--- a/src/components/Trips/TripDetails.css
+++ b/src/components/Trips/TripDetails.css
@@ -109,6 +109,7 @@
   color: white;
   box-shadow: 0 6px 20px rgba(31, 193, 222, 0.4);
   border: 2px solid transparent;
+  padding: unset;
 }
 
 .btn-edit:hover {
@@ -157,7 +158,7 @@
 }
 
 .trip-details-content {
-  display: grid;
+  display: inline-table;
   grid-template-columns: 1fr 1fr;
   gap: 24px;
   align-items: start;
@@ -209,6 +210,7 @@
   padding: 32px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
   border: 1px solid #e2e8f0;
+    margin-top: 2rem;
 }
 
 .trip-details-packages {
@@ -218,6 +220,7 @@
   padding: 32px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
   border: 1px solid #e2e8f0;
+  margin-top: 2rem;
 }
 
 .trip-details-comments {
@@ -298,6 +301,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 12px;
+  align-items: center;
 }
 
 .trip-details-location,
@@ -330,7 +334,7 @@
 
 .trip-details-price {
   text-align: center;
-  padding: 28px;
+  padding: 13px;
   background: linear-gradient(135deg, #1fc1de, #00a6c9);
   border-radius: 20px;
   color: white;
@@ -346,7 +350,7 @@
 }
 
 .price-amount {
-  font-size: 2.2rem;
+  font-size: 1.5rem;
   font-weight: 900;
   color: white;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -1204,7 +1208,8 @@
 @media (max-width: 1024px) {
   .trip-details-header-section {
     grid-template-columns: 1fr;
-    gap: 24px;
+    /* gap: 24px; */
+    gap: revert-layer;
   }
 
   .trip-details-grid {
@@ -1249,7 +1254,7 @@
   .btn-action {
     width: 100%;
     justify-content: center;
-    padding: 14px 16px;
+    padding: unset
   }
 
   .trip-details-meta {
