--- a/src/components/Bookings/BookingsList.css
+++ b/src/components/Bookings/BookingsList.css
@@ -255,6 +255,10 @@
   margin: 0;
 }
 
+.filter-group{
+  text-align-last: center;
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
@@ -306,3 +310,4 @@
     font-size: 12px;
   }
 } 
+
