--- a/src/components/Banners/BannerDetails.css
+++ b/src/components/Banners/BannerDetails.css
@@ -212,8 +212,8 @@
 }
 
 .trip-image {
-  width: 80px;
-  height: 60px;
+  /* width: 80px; */
+  /* height: 60px; */
   border-radius: 4px;
   overflow: hidden;
   flex-shrink: 0;
