--- a/src/components/Bookings/BookingDetails.css
+++ b/src/components/Bookings/BookingDetails.css
@@ -340,9 +340,9 @@
 .trip-details span {
   display: block;
   padding: 6px 12px;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   border-radius: 4px;
-  border: 1px solid #e2e8f0;
+  /* border: 1px solid #e2e8f0; */
   font-weight: 500;
 }
 
