--- a/src/components/Customers/CustomersList.css
+++ b/src/components/Customers/CustomersList.css
@@ -83,7 +83,7 @@
   background: white;
   padding: 20px;
   border-radius: 16px;
-  margin-bottom: 24px;
+  /* margin-bottom: 24px; */
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   gap: 20px;
