ui fixes for booking and notification fetch messaging

--- a/src/components/Customers/CustomersList.css
+++ b/src/components/Customers/CustomersList.css
@@ -80,7 +80,9 @@
 }
 
 .filters-panel {
-  background: white;
+  /* background: rgb(235, 234, 234); */
+  background: rgb(244, 242, 242);
+
   padding: 20px;
   border-radius: 16px;
   /* margin-bottom: 24px; */
@@ -89,6 +91,7 @@
   gap: 20px;
   flex-wrap: wrap;
   align-items: end;
+  flex-direction: row;
 }
 
 .filter-group {
@@ -188,7 +191,7 @@
   border-color: #1fc1de;
   background: white;
 } */
- 
+
 
 .city-search-container {
   position: relative;
