--- a/src/components/Trips/TripForm.css
+++ b/src/components/Trips/TripForm.css
@@ -325,9 +325,10 @@
 
 /* Service Options */
 .trip-options {
-  display: flex;
+  /* display: table-column; */
   flex-direction: column;
   gap: 16px;
+  display: flex;
 }
 
 .trip-option-item {
@@ -499,6 +500,14 @@
     flex-direction: column;
     gap: 16px;
     text-align: center;
+  }
+
+  .trip-options{
+    display: table-column;
+  }
+
+  .trip-option-item{
+    display: table-column;
   }
 
   .trip-form-content {
